# JulienCombes

./: .gitignore  README.md  _quarto.yml  about.qmd  biblio.bib  bio.qmd  index.qmd  linux.qmd  main.py  mlflow.db  my_phd.qmd  params.yml  publications.qmd  pyproject.toml  req_to_run_code.txt  research.qmd  talks.qmd
docs/: about.html  bio.html  index-listing.json  index.html  linux.html  listings.json  my_phd.html  publications.html  research.html  search.json  talks.html
docs/posts/2025_12_10_al_doesn_work/: index.html
docs/posts/2025_12_11_cpintrocifar/: index.html
docs/posts/2025_12_23_pandas/: index.html
docs/posts/2026_01_05_tutoquarto/: index.html
docs/posts/2026_01_10_ethics_randomness/: index.html
docs/posts/2026_06_09_typst/: index.html
docs/posts/al_doesn_work/: index.html
docs/posts/cifar_classif/: index.html
docs/posts/phd_tools/: index.html
posts/2025_12_11_cpintrocifar/: index.qmd
posts/2025_12_23_pandas/: index.qmd
posts/2026_01_05_tutoquarto/: index.qmd
posts/2026_01_10_ethics_randomness/: index.qmd
posts/2026_06_09_typst/: index.qmd
posts/al_doesn_work/: index.qmd
posts/cifar_classif/: index.qmd
posts/phd_tools/: index.qmd
posts/research_ECAS2025/: index.qmd
posts/research_JRAF2025/: index.html  index.qmd
posts/research_PAISS2025/: index.qmd
posts/research_ijcnn/: index.qmd
posts/uv_ml/: index.html  index.qmd
posts/voc_detection/: create_dataset.py  index.qmd
site_libs/bootstrap/: bootstrap-584a26e4489f1dd2382f5c3a0a2c4d27.min.css  bootstrap-dark-7fa1ebcdb218fee52460749f49196131.min.css
(+15 files in other folders)
