[project]
name = "juliencombes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentationsx>=2.0.13",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pycocotools>=2.0.10",
    "relplot>=1.0.3",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
    "torchcp>=1.2.1",
    "torchmetrics>=1.8.2",
    "torchsort>=0.1.10",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]


[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
